# fanSpeedControl

./: .gitignore  CMakeLists.txt  Makefile  README.md  design.md  problem_statement.md
cmake/: FindgRPC.cmake  gRPCGenerate.cmake
config/: config.yaml
docker/: Dockerfile  cleanup.sh  run_container.sh
images/: code_architecture_diagram.drawio
include/cli/: cli.hpp
include/common/: alarm.hpp  config.hpp  logger.hpp  mqtt_client.hpp  rpc_server.hpp  utils.hpp
include/fan_control_system/: alarm_manager.hpp  fan.hpp  fan_control_system.hpp  fan_control_system_server.hpp  fan_simulator.hpp  log_manager.hpp  temp_monitor_and_cooling.hpp
include/mcu_simulator/: mcu.hpp  mcu_simulator.hpp  mcu_simulator_server.hpp  temperature_sensor.hpp
lnav/: fan_control_system.json
presentation/: code_walkthrough.md  demo_script.md
scripts/: alarm_monitor.py  log_monitor.py  requirements.txt  temp_monitor.py
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  cli.cpp  main.cpp
src/common/: CMakeLists.txt  alarm.cpp  config.cpp  logger.cpp  mqtt_client.cpp  rpc_server.cpp  utils.cpp
src/fan_control_system/: CMakeLists.txt  alarm_manager.cpp  fan.cpp  fan_control_system.cpp  fan_control_system_server.cpp  fan_simulator.cpp  log_manager.cpp  main.cpp  temp_monitor_and_cooling.cpp
src/mcu_simulator/: CMakeLists.txt  main.cpp  mcu.cpp  mcu_simulator.cpp  mcu_simulator_server.cpp  temperature_sensor.cpp
src/proto/: CMakeLists.txt  fan_control_system.proto  mcu_simulator.proto
